added blinky light

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelsam
 board = adafruit_grandcentral_m4
 framework = arduino
+upload_port =
 lib_deps =
     briscoetech/FreeRTOS_SAMD51@^1.3.0
     adafruit/Adafruit NeoPixel@^1.10.7
